# lumidora-chatbot

./: .gitignore  README.md  main.py  pyproject.toml  readme.txt  requirements.txt  setup.ps1
datastore/: store.txt
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc
src/chatbot/: agent.py  basic_module.py  chat.py  chatbot.py  chatbot_basic_module.py  embedding.py  fastapi.py  lumidora.py  main.py  vectordb_module copy.py  vectordb_module.py
src/chatbot/api/: fastapi.py
src/chatbot/api/router/: basic_router.py
src/chatbot/ui/: iface.py
vector_db.faiss/: index.faiss  index.pkl
