[tool.poetry]
name = "lumidora-chatbot"
version = "0.1.0"
description = ""
authors = ["Dominik Bruhn <dominikbruhn@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
langchain = "^0.0.335"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
